# core-shell

./: CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
.github/workflows/: rust.yml
src/: -  builtin.rs  coresh_file.rs  env.rs  formatting.rs  main.rs  run.rs  script.rs  shell.rs
